integration tests/envoy/cert-client-proxy.yaml
static_resources:
  listeners:
    - name: conformance_entry
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 18080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: conformance_entry
                route_config:
                  name: conformance_entry
                  virtual_hosts:
                    - name: op
                      domains: ["*"]
                      request_headers_to_add:
                        - header:
                            key: x-forwarded-host
                            value: "%REQ(:AUTHORITY)%"
                          append_action: OVERWRITE_IF_EXISTS_OR_ADD
                        - header:
                            key: x-forwarded-proto
                            value: http
                          append_action: OVERWRITE_IF_EXISTS_OR_ADD
                        - header:
                            key: x-forwarded-port
                            value: "18080"
                          append_action: OVERWRITE_IF_EXISTS_OR_ADD
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: mtls_op
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: mtls_op
      type: STRICT_DNS
      connect_timeout: 2s
      load_assignment:
        cluster_name: mtls_op
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: mtls-edge
                      port_value: 19443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: mtls-edge
          common_tls_context:
            tls_certificates:
              - certificate_chain:
                  filename: /certs/client.crt
                private_key:
                  filename: /certs/client.key
            validation_context:
              trusted_ca:
                filename: /certs/ca.crt
