integration tests/envoy/mtls-edge.yaml
static_resources:
  listeners:
    - name: plain_echo
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: plain_echo
                route_config:
                  name: plain_echo
                  virtual_hosts:
                    - name: echo
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: echo_backend
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    - name: mtls_echo
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10443
      filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              require_client_certificate: true
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: /certs/server.crt
                    private_key:
                      filename: /certs/server.key
                validation_context:
                  trusted_ca:
                    filename: /certs/ca.crt
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: mtls_echo
                forward_client_cert_details: SANITIZE_SET
                set_current_client_cert_details:
                  subject: true
                route_config:
                  name: mtls_echo
                  virtual_hosts:
                    - name: echo
                      domains: ["*"]
                      request_headers_to_add:
                        - header:
                            key: x-forwarded-proto
                            value: https
                          append_action: OVERWRITE_IF_EXISTS_OR_ADD
                        - header:
                            key: x-forwarded-port
                            value: "10443"
                          append_action: OVERWRITE_IF_EXISTS_OR_ADD
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: echo_backend
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    - name: mtls_op
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 19443
      filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              require_client_certificate: true
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: /certs/server.crt
                    private_key:
                      filename: /certs/server.key
                validation_context:
                  trusted_ca:
                    filename: /certs/ca.crt
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: mtls_op
                forward_client_cert_details: SANITIZE_SET
                set_current_client_cert_details:
                  subject: true
                route_config:
                  name: mtls_op
                  virtual_hosts:
                    - name: op
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: op
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: echo_backend
      type: STRICT_DNS
      connect_timeout: 2s
      load_assignment:
        cluster_name: echo_backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: echo-backend
                      port_value: 9000

    - name: op
      type: STRICT_DNS
      connect_timeout: 2s
      load_assignment:
        cluster_name: op
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: op
                      port_value: 3000
